deleted models and services, added yaml file for generating then, fixes in components
