# src/app/common/models/account-credentials.ts
@@ -1,4 +1,0 @@
-export interface AccountCredentials {
-    username: string;
-    password: string;
-}
