# src/app/common/models/auth-token.ts
@@ -1,7 +1,0 @@
-import { User } from './user';
-
-export interface AuthToken {
-    user: User;
-    expirationTime: Date;
-    isAdmin: boolean;
-}
