# src/app/common/models/user.ts
@@ -1,9 +1,0 @@
-export enum UserRole {
-    FirstDegree, SecondDegree, ThirdDegree, Admin
-}
-
-export class User {
-    id: number;
-    username: string;
-    role: UserRole;
-}
