# swagger.yaml
@@ -28,6 +28,8 @@ paths:
       tags:
         - category
       summary: categories
+      consumes: 
+        - application/json
       responses:
         '200':
           description: get all categiries
@@ -40,7 +42,9 @@ paths:
       tags:
         - category
       summary: add new category
-      consumes: 
+      consumes:
+        - application/json
+      produces:
         - application/json
       parameters:
         - in: body
@@ -58,6 +62,8 @@ paths:
       tags:
         - category
       summary: get category by id
+      produces:
+        - application/json
       parameters:
         - name: id
           in: path
@@ -69,6 +75,7 @@ paths:
           description: succsess
           schema:
             $ref: '#/definitions/Category'
+
   /users:
     get:
       operationId: getUsers
@@ -84,12 +91,17 @@ paths:
               $ref: '#/definitions/User'
         '403':
           description: does not created yeat
+
   /articles:
     get:
       operationId: getArticles
       tags:
         - article
       summary: get articles
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - in: query
           name: category
@@ -97,7 +109,6 @@ paths:
           type: integer
           format: int32
           required: false
-          minimum: 1
         - in: query
           name: limit
           description: maximum number of records to return
@@ -106,6 +117,12 @@ paths:
           default: 10
           minimum: 0
           maximum: 50
+          required: false
+        - in: header
+          name : AuthToken
+          description: authorization token
+          type: string
+          required: false
       responses:
         '200':
           description: articles mathching criteria
@@ -115,6 +132,8 @@ paths:
               $ref: '#/definitions/Article'
         '400':
           description: bad input parameter
+
+  /createArticle:
     post:
       operationId: postArticle
       tags:
@@ -128,12 +147,18 @@ paths:
           description: new article
           schema:
             $ref: '#/definitions/Article'
+        - in: body
+          name : AuthToken
+          description: authorization token
+          schema:
+            $ref: '#/definitions/AuthToken'
+          required: true
       responses:
         '201':
           description: category`ve been created
       deprecated: false
 
-  /articles{id}:
+  /articles/{id}:
     get:
       operationId: getArticle
       tags:
@@ -145,6 +170,11 @@ paths:
           description: get article by id
           required: true
           type: integer
+        - name : AuthToken
+          in: query
+          description: authorization token
+          type: string
+          required: false
       responses:
         '200':
           description: article with id
@@ -160,8 +190,8 @@ definitions:
     type: "object"
     properties:
         id:
-            type: "integer"
-            format: "int64"
+            type: integer
+            format: int32
         title:
             type: "string"
             format: string
@@ -206,7 +236,7 @@ definitions:
         format: int32
       title:
         type: "string"
-      user:
+      author:
         $ref: '#/definitions/User'
       category: 
         $ref: '#/definitions/Category'
@@ -218,7 +248,7 @@ definitions:
     required:
       - id
       - title
-      - user
+      - author
       - category
       - content
       - creationDate
@@ -230,3 +260,19 @@ definitions:
       - SecondDegree 
       - ThirdDegree
       - Admin
+  AccountCredentials:
+    type: object
+    properties: 
+      username:
+        type: string
+      password: 
+        type: string
+        format: password
+  AuthToken:
+    type: object
+    properties: 
+      user:
+        $ref: '#/definitions/User'
+      expirationTime: 
+        type: string
+        format: date-time
